--- a/_posts/2018-03-07-오늘의-모임-1.-My-Wallet-V3-안드로이드.md
+++ b/_posts/2018-03-07-오늘의-모임-1.-My-Wallet-V3-안드로이드.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "오늘의 모임 1. My Wallet V3 안드로이드(​프론트엔드)"
+title: "My Wallet V3 안드로이드(​프론트엔드)"
 tags: 180307 원장지갑 not-tried
 ---
 
