--- a/_posts/2018-03-07-이거-조금-까다롭네.md
+++ b/_posts/2018-03-07-이거-조금-까다롭네.md
@@ -8,6 +8,7 @@ tags: life
 인텔리J md 관련 플러그인으로 보는 결과물과 달라서 업로드 후에 고칠 수 밖에 없군..
 
 또 태그가 잘 안먹는 것 같음.
+180307 숫자 태그를 줬는데, 먹질 않음...
 
 제일 큰 문제는! 제목이 길면! 보이질 않아!
 15년전 PC 처럼!!!
