--- a/_posts/2018-03-05-블로그를-시작해-볼까-합니다.md
+++ b/_posts/2018-03-05-블로그를-시작해-볼까-합니다.md
@@ -4,7 +4,8 @@ title: "블로그를 시작해볼까 합니다"
 tags: life study
 ---
 
-블로그를 시작해보려고 합니다.
+## 블로그를 시작해보려고 합니다.
+
 github page는 예전부터 재미있게 보고있었는데, Jekyll 테마 사이트에 Window 95 테마가 있어서 사용해보았습니다.
 재밌네요!
 
