--- a/_posts/2018-03-07-이거-조금-까다롭네.md
+++ b/_posts/2018-03-07-이거-조금-까다롭네.md
@@ -4,6 +4,8 @@ title: "이거 조금 까다롭네"
 tags: life
 ---
 
+## 이거 좀 많이 까다롭네
+
 우선 .md 방식이 개발자스러워서 사용했는데,
 인텔리J md 관련 플러그인으로 보는 결과물과 달라서 업로드 후에 고칠 수 밖에 없군..
 
